[gd_scene load_steps=4 format=2]

[ext_resource path="res://png/unnamed-9.png" type="Texture" id=1]
[ext_resource path="res://png/4-2.png" type="Texture" id=2]
[ext_resource path="res://Scenes/GameOver.gd" type="Script" id=7]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 7 )

[node name="4-2" type="Sprite" parent="."]
position = Vector2( 528, 272 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 2 )

[node name="Volver a Jugar" type="Button" parent="."]
margin_left = 288.0
margin_top = 280.0
margin_right = 704.0
margin_bottom = 324.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inicio" type="Button" parent="."]
margin_left = 416.0
margin_top = 368.0
margin_right = 544.0
margin_bottom = 408.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 320.0
margin_top = 456.0
margin_right = 672.0
margin_bottom = 496.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="unnamed-9" type="Sprite" parent="."]
position = Vector2( 472, 304 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 1 )
[connection signal="pressed" from="Volver a Jugar" to="." method="_on_Volver_a_Jugar_pressed"]
[connection signal="pressed" from="Inicio" to="." method="_on_Inicio_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
